--- a/index.html
+++ b/index.html
@@ -62,41 +62,44 @@
                       <img src="images/number-keychains.jpg" class="image-responsive">
                     </div>
                     <div class="checkbox">
-                      <label><input type="checkbox" value="" onclick="calculateTotal()" id="numberkeychains" />Number Key Chains 10.00 PHP</label>
+                      <label><input type="checkbox" value="numberkeychains" id="numberkeychains" />Number Key Chains $10.00 </label>
                     </div>
-                  <div class="form-group">
+                  <div class="form-group" id="dropdown1">
                       <label for="sel1">Quantity</label>
-                       <select class="form-control" id="sel1">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>5</option>
-                        <option>6</option>
-                        <option>7</option>
-                        <option>8</option>
-                        <option>9</option>
-                        <option>10</option>
+                       <select class="form-control" id="sel1" onclick="calculateTotal()">                   
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
                       </select>
                      </div> 
-
                     <div>
                     <img src="images/personalized-keychains.jpg" class="image-responsive">
                     </div>
                     <div class="checkbox">
-                      <label><input type="checkbox" value="" onclick="calculateTotal()" id="personalizedkeychains"/>Personalized Key Chains 20.00 PHP</label>
+                      <label><input type="checkbox" value="personalizedkeychains" id="personalizedkeychains" />Personalized Key Chains $20.00</label>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="dropdown2">
                       <label for="sel2">Quantity</label>
-                       <select class="form-control" id="sel2">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>5</option>
-                        <option>6</option>
-                        <option>7</option>
-                        <option>8</option>
-                        <option>9</option>
-                        <option>10</option>
+                       <select class="form-control" id="sel2" onclick="calculateTotal()">                  
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
                       </select>
                      </div> 
                 </div>
@@ -113,7 +116,7 @@
                   <textarea class="form-control" rows="5"></textarea>
                 </div>
                 <div class="form-group">   
-                  <input type="submit" class="form-control" class="btn btn-default" id="submit" value="Submit Order"  onClick="doSubmit()"/>
+                  <input type="submit" class="form-control" class="btn btn-primary" id="submit" value="Submit Order"  onClick="doSubmit()"/>
                 </div>
                 </div>
                </form>
