--- a/index.html
+++ b/index.html
@@ -116,17 +116,13 @@
                   <textarea class="form-control" rows="5"></textarea>
                 </div>
                 <div class="form-group">   
-                  <input type="submit" class="form-control" class="btn btn-primary" id="submit" value="Submit Order"  onClick="doSubmit()"/>
+                  <input type="submit" class="form-control" class="btn btn-default" id="submit" value="Submit Order"  onClick="doSubmit()"/>
                 </div>
                 </div>
                </form>
           </div>
         </div>
     </div>
-
-    <!-- calculation.js -->
-    
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
